--- a/pages/index.scss
+++ b/pages/index.scss
@@ -125,3 +125,5 @@
 @import '../Common.blocks/FilterDateDropdown/-Icon/FilterDateDropdown-Icon';
 @import '../Common.blocks/FilterDateDropdown/-Dropdown/FilterDateDropdown-Dropdown';
 @import '../Common.blocks/Wrapper/-FilterDateDropdown/Wrapper-FilterDateDropdown';
+@import '../Common.blocks/InputBlock/-Form/InputBlock-Form';
+@import '../Common.blocks/List/List';
