--- a/Common.blocks/InputBlock/-WrapperForSelectWithArrow/InputBlock-WrapperForSelectWithArrow.pug
+++ b/Common.blocks/InputBlock/-WrapperForSelectWithArrow/InputBlock-WrapperForSelectWithArrow.pug
@@ -1,4 +1,4 @@
 mixin InputBlock-WrapperForSelectWithArrow(content)
-    div.InputBlock-WrapperForSelectWithArrow&attributes(attributes) #{content}
+    label.InputBlock-WrapperForSelectWithArrow&attributes(attributes) #{content}
         if block
             block
