--- a/pages/index.scss
+++ b/pages/index.scss
@@ -127,3 +127,27 @@
 @import '../Common.blocks/Wrapper/-FilterDateDropdown/Wrapper-FilterDateDropdown';
 @import '../Common.blocks/InputBlock/-Form/InputBlock-Form';
 @import '../Common.blocks/List/List';
+@import '../Common.blocks/TitleBlock/TitleBlock';
+@import '../Common.blocks/TitleForButtonsAndInputs/TitleForButtonsAndInputs';
+
+@import '../Common.blocks/DescriptionForButtonsAndInputs/DescriptionForButtonsAndInputs';
+@import '../Common.blocks/ImageForButtonsAndInputs/ImageForButtonsAndInputs';
+@import '../Common.blocks/InputForButtonsAndInputs/InputForButtonsAndInputs';
+@import '../Common.blocks/ExpandableCheckboxList/ExpandableCheckboxList';
+@import '../Common.blocks/Wrapper/-ExpandableCheckboxList/Wrapper-ExpandableCheckboxList';
+@import '../Common.blocks/List/-Item/List-Item';
+@import '../Common.blocks/ExpandableCheckboxList/-List/ExpandableCheckboxList-List';
+@import '../Common.blocks/TitleBlock/-H/TitleBlock-H';
+@import '../Common.blocks/TitleBlock/-H3/TitleBlock-H3';
+@import '../Common.blocks/ExpandableCheckboxList/-Header/ExpandableCheckboxList-Header';
+@import '../Common.blocks/TitleBlock/-Icon/TitleBlock-Icon';
+
+@import '../Common.blocks/DescriptionBlock/DescriptionBlock';
+@import '../Common.blocks/Wrapper/-DescriptionBlock/Wrapper-DescriptionBlock';
+
+@import '../Common.blocks/FigcaptionDescriptionBlock/FigcaptionDescriptionBlock';
+@import '../Common.blocks/FigureDescriptionBlock/-Figcaption/FigureDescriptionBlock-Figcaption';
+@import '../Common.blocks/FigureDescriptionBlock/FigureDescriptionBlock';
+@import '../Common.blocks/FigureDescriptionBlock/-Wrapper/FigureDescriptionBlock-Wrapper';
+@import '../Common.blocks/Content/-RightWrapper/Content-RightWrapper';
+@import '../Common.blocks/Wrapper/-CheckboxButtons/Wrapper-CheckboxButtons';
