--- a/Common.blocks/Content/-WrapperForFormElements/Content-WrapperForFormElements.scss
+++ b/Common.blocks/Content/-WrapperForFormElements/Content-WrapperForFormElements.scss
@@ -26,7 +26,7 @@
  .Content-WrapperForFormElements {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  // justify-content: space-between;
   padding-left: 141px;
   padding-top: 58px;
   //padding-right: 177px;
