--- a/Common.blocks/List/List.pug
+++ b/Common.blocks/List/List.pug
@@ -1,4 +1,4 @@
 mixin List(content)
-    div.List&attributes(attributes) #{content}
+    ul.List&attributes(attributes) #{content}
         if block
             block
