--- a/Common.blocks/DescriptionForButtonsAndInputs/DescriptionForButtonsAndInputs.pug
+++ b/Common.blocks/DescriptionForButtonsAndInputs/DescriptionForButtonsAndInputs.pug
@@ -1,4 +1,4 @@
 mixin DescriptionForButtonsAndInputs(content)
-    label.DescriptionForButtonsAndInputs&attributes(attributes) #{content}
+    div.DescriptionForButtonsAndInputs&attributes(attributes) #{content}
         if block
             block
