--- a/pages/index.scss
+++ b/pages/index.scss
@@ -151,3 +151,23 @@
 @import '../Common.blocks/FigureDescriptionBlock/-Wrapper/FigureDescriptionBlock-Wrapper';
 @import '../Common.blocks/Content/-RightWrapper/Content-RightWrapper';
 @import '../Common.blocks/Wrapper/-CheckboxButtons/Wrapper-CheckboxButtons';
+@import '../Common.blocks/RadioButtons/RadioButtons';
+@import '../Common.blocks/Toggle/Toggle';
+@import '../Common.blocks/LikeButton/LikeButton';
+@import '../Common.blocks/RateButton/RateButton';
+@import '../Common.blocks/Wrapper/-FirstDropdownGuests/Wrapper-FirstDropdownGuests';
+@import '../Common.blocks/RichCheckboxButtons/RichCheckboxButtons';
+@import '../Common.blocks/List/-WrapperForDescription/List-WrapperForDescription';
+@import '../Common.blocks/RangeSliderBlock/RangeSliderBlock';
+@import '../Common.blocks/RangeSlider/RangeSlider';
+@import '../Common.blocks/Wrapper/-LeftColumn/Wrapper-LeftColumn';
+@import '../Common.blocks/Wrapper/-RightColumn/Wrapper-RightColumn';
+@import '../Common.blocks/Content/-RightColumn/Content-RightColumn';
+@import '../Common.blocks/Content/-LeftColumn/Content-LeftColumn';
+@import '../Common.blocks/Content/-WrappperRow/Content-WrappperRow';
+@import '../Common.blocks/Content/-WrapperRow/Content-WrapperRow';
+@import '../Common.blocks/ButtonsBlock/ButtonsBlock';
+@import '../Common.blocks/TitleBlock/-H6/TitleBlock-H6';
+@import '../Common.blocks/ButtonsBlock/-WrapperForSamples/ButtonsBlock-WrapperForSamples';
+@import '../Common.blocks/Button/Button';
+@import '../Common.blocks/PayButton/PayButton';
