--- a/Common.blocks/TitleBlock/-H6/TitleBlock-H6.scss
+++ b/Common.blocks/TitleBlock/-H6/TitleBlock-H6.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .Button {
+  .TitleBlock-H6 {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Button {
+  .TitleBlock-H6 {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Button {
+  .TitleBlock-H6 {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Button {
+  .TitleBlock-H6 {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Button {
+  .TitleBlock-H6 {
 
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Button {
+  .TitleBlock-H6 {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Button {
+  .TitleBlock-H6 {
 
   }
 }
