--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,23 @@
+include ../Common.blocks/PayButton/PayButton.pug
+include ../Common.blocks/Button/Button.pug
+include ../Common.blocks/ButtonsBlock/-WrapperForSamples/ButtonsBlock-WrapperForSamples.pug
+include ../Common.blocks/TitleBlock/-H6/TitleBlock-H6.pug
+include ../Common.blocks/ButtonsBlock/ButtonsBlock.pug
+include ../Common.blocks/Content/-WrapperRow/Content-WrapperRow.pug
+include ../Common.blocks/Content/-WrappperRow/Content-WrappperRow.pug
+include ../Common.blocks/Content/-LeftColumn/Content-LeftColumn.pug
+include ../Common.blocks/Content/-RightColumn/Content-RightColumn.pug
+include ../Common.blocks/Wrapper/-RightColumn/Wrapper-RightColumn.pug
+include ../Common.blocks/Wrapper/-LeftColumn/Wrapper-LeftColumn.pug
+include ../Common.blocks/RangeSlider/RangeSlider.pug
+include ../Common.blocks/RangeSliderBlock/RangeSliderBlock.pug
+include ../Common.blocks/List/-WrapperForDescription/List-WrapperForDescription.pug
+include ../Common.blocks/RichCheckboxButtons/RichCheckboxButtons.pug
+include ../Common.blocks/Wrapper/-FirstDropdownGuests/Wrapper-FirstDropdownGuests.pug
+include ../Common.blocks/RateButton/RateButton.pug
+include ../Common.blocks/LikeButton/LikeButton.pug
+include ../Common.blocks/Toggle/Toggle.pug
+include ../Common.blocks/RadioButtons/RadioButtons.pug
 include ../Common.blocks/Wrapper/-CheckboxButtons/Wrapper-CheckboxButtons.pug
 include ../Common.blocks/Content/-RightWrapper/Content-RightWrapper.pug
 include ../Common.blocks/FigureDescriptionBlock/-Wrapper/FigureDescriptionBlock-Wrapper.pug
@@ -213,7 +233,7 @@ html
                             +InputBlock-Form()
                                 +InputBlock-WrapperForSelectWithArrow()
                                     +InputBlock-SelectArrow('arrow_forward')
-                                    +InputBlock-InputField(type='text' placeholder='Email')(class='InputBlock_width_266px InputBlock_appearan_none InputBlock_pdTop_11px InputBlock_letterSpacing_0px InputBlock_mrBot_97px InputBlock_color_dark75')
+                                    +InputBlock-InputField(type='text' placeholder='Email' class='InputBlock_width_266px InputBlock_appearan_none InputBlock_pdTop_11px InputBlock_letterSpacing_0px InputBlock_mrBot_97px InputBlock_color_dark75')
                         +InputBlock()(class='Wrapper-FacilitiesDropdown')
                             +InputBlock-Wrapper(class='InputBlock_width_265px')
                                 +InputBlock-FieldName('dropdown')
@@ -309,7 +329,7 @@ html
                                         +TitleForButtonsAndInputs() Удобство
                                         +DescriptionForButtonsAndInputs() Окно в каждой из спален
                     +Wrapper.Content-RightWrapper()
-                        +Wrapper()
+                        +Wrapper.Content-WrapperRow()
                             +Wrapper()
                                 +ExpandableCheckboxList()
                                     +TitleBlock.ExpandableCheckboxList-Header()
@@ -324,32 +344,93 @@ html
                                         +List-Item()
                                             +InputForButtonsAndInputs(type="checkbox")
                                             +DescriptionForButtonsAndInputs() Можно пригласить гостей (до 10 человек)
-                            +Wrapper()
+                                +RadioButtons()
+                                    +TitleBlock.ExpandableCheckboxList-Header()
+                                        +TitleBlock-H3() Radio Buttons
+                                    +List.ExpandableCheckboxList-List()
+                                        +List-Item()
+                                            +InputForButtonsAndInputs(type="checkbox")
+                                            +DescriptionForButtonsAndInputs() Мужчина
+                                        +List-Item()
+                                            +InputForButtonsAndInputs(type="checkbox")
+                                            +DescriptionForButtonsAndInputs() Женщина
+                                +Toggle()
+                                    +TitleBlock.ExpandableCheckboxList-Header()
+                                        +TitleBlock-H3() Toggle
+                                    +List.ExpandableCheckboxList-List()
+                                        +List-Item()
+                                            +InputForButtonsAndInputs(type="checkbox")
+                                            +DescriptionForButtonsAndInputs() Получать спецпредложения
+                                        +List-Item()
+                                            +InputForButtonsAndInputs(type="checkbox")
+                                            +DescriptionForButtonsAndInputs() Получать спецпредложения
+                                +LikeButton()
+                                    +TitleBlock.ExpandableCheckboxList-Header()
+                                        +TitleBlock-H3() like button
+                                    +List.ExpandableCheckboxList-List()
+                                        +List-Item()
+                                            +InputForButtonsAndInputs(type="checkbox")
+                                        +List-Item()
+                                            +InputForButtonsAndInputs(type="checkbox")
+                                +RateButton()
+                                    +TitleBlock.ExpandableCheckboxList-Header()
+                                        +TitleBlock-H3() rate button
+                                    +List.ExpandableCheckboxList-List()
+                                        +List-Item()
+                                            //+InputForButtonsAndInputs(type="checkbox")
+                                        +List-Item()
+                                            //+InputForButtonsAndInputs(type="checkbox")
+                                +Wrapper-FirstDropdownGuests()
+                                    +InputBlock()(class='')
+                                        +InputBlock-Wrapper
+                                            +InputBlock-FieldName('dropdown')
+                                            +InputBlock-FieldDescription('default')(class='InputBlock_pdTop_3px')
+                                        +InputBlock-Form()
+                                            Select.DropdownGuests(multiple='multiple', id="DropdownGuests2", name='DropdownGuests', size='3')
+                                                +DropdownGuests-Option('взрослые')(value='adults')
+                                                +DropdownGuests-Option('дети')(value='children')
+                                                +DropdownGuests-Option('младенцы')(value='babies')
+                                //+RichCheckboxButtons()
+                                +ExpandableCheckboxList()
+                                    +TitleBlock.ExpandableCheckboxList-Header()
+                                        +TitleBlock-H3() Rich Checkbox Buttons
+                                    +List.ExpandableCheckboxList-List()
+                                        +List-Item()
+                                            +InputForButtonsAndInputs(type="checkbox")
+                                            +List-WrapperForDescription()
+                                                +TitleForButtonsAndInputs() Широкий коридор
+                                                +DescriptionForButtonsAndInputs() Ширина коридоров в номере не менее 91 см.
+                                        +List-Item()
+                                            +InputForButtonsAndInputs(type="checkbox")
+                                            +List-WrapperForDescription()
+                                                +TitleForButtonsAndInputs() Помощник для инвалидов
+                                                +DescriptionForButtonsAndInputs() На 1 этаже вас встретит специалист и проводит до номера.
+                            +Wrapper.Content-RightColumn()
+                                +RangeSliderBlock()
+                                    +TitleBlock.ExpandableCheckboxList-Header()
+                                        +TitleBlock-H3() Range Slider
+                                        +TitleBlock-H6() 5 000₽ - 10 000₽
+
+                                    +RangeSlider()
+                                +ButtonsBlock()
+                                    +ButtonsBlock-WrapperForSamples()
+                                        +Button()
+                                        +Button()
+                                    +ButtonsBlock-WrapperForSamples()
+                                        +Button()
+                                        +Button()
+                                    +ButtonsBlock-WrapperForSamples()
+                                        +Button()
+                                        +Button()
+                                    +ButtonsBlock-WrapperForSamples()
+                                        +PayButton()
                         +Wrapper()
 
 
 
+//+Wrapper-CheckboxButtons()
 
 
-//+List()
-//+TitleBlock()
-//+TitleForButtonsAndInputs()
-//
-//+DescriptionForButtonsAndInputs()
-//+ImageForButtonsAndInputs()
-////+InputForButtonsAndInputs()
-//
-//
-//+DescriptionBlock()
-//
-//
-//
-//
-//
-//
-//+FigureDescriptionBlock-Figcaption()
-//+FigureDescriptionBlock()
-//
-//+FigureDescriptionBlock-Wrapper()
 
-+Wrapper-CheckboxButtons()
+
+
